--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
     </div>
 
   </div>
-
-
+  <!-- Linked to jQuery and Javascript File -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="./game.js"></script>
 </body>
 
 </html>
